# prometheus-rust-server

./: Cargo.toml
src/: error.rs  lib.rs  main.rs  model.rs
src/web/: mod.rs  mw_auth.rs  routes_login.rs  routes_tickets.rs
tests/: quick_dev.rs
